--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <h2>সভাপতি ও সম্পাদক</h2>
     <div class="card-container">
       <div class="card">
-        <img src="/image/shahidul.jpg" alt="Shahidul Islam" />
+        <img src="shahidul.jpg" alt="Shahidul Islam" />
         <h3>সভাপতি</h3>
         <p>মোঃ শহিদুল ইসলাম</p>
       </div>
       <div class="card">
-        <img src="/image/firoz.jpg" alt="Firoz Hossain" />
+        <img src="firoz.jpg" alt="Firoz Hossain" />
         <h3>সম্পাদক</h3>
         <p>মোঃ ফিরোজ হোসেন</p>
       </div>
