--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>সভাপতি ও সম্পাদক</h2>
     <div class="card-container">
       <div class="card">
-        <img src="journalist/shahidul.jpg" alt="Shahidul Islam" />
+        <img src="shahidul.jpg" alt="Shahidul Islam" />
         <h3>সভাপতি</h3>
         <p>মোঃ শহিদুল ইসলাম</p>
       </div>
